# antocuni.github.io

./: .gitignore  20-years-oss.txt  404.html  CNAME  Makefile  README.md  annotate_slides.py  autorun.py  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  hello-world.md~  hello3.md~  index.html  lstalks.py  md.md.txt  md.md~  mkdocs.yml  new.py  newpost.sh  newpost.sh~  newtalk.sh  og-crop.py  pyproject.toml  requirements.txt  rss.md~  sitemap.xml  talks.html  update_current.sh
2008/01/: improve-net-integration-2239651503641931440.md~  pypynet-goes-windows-forms-7031406830502864570.md~
2008/04/: trying-to-get-pypy-to-run-on-python-30-5082015544752137606.md~
2008/05/: progresses-on-cli-jit-backend-front-1021772190959551376.md~
2008/06/: next-sprint-vilniuspost-europython-10-3844544842675903586.md~  pypy-code-swarm-7038411918926116477.md~
2008/11/: porting-jit-to-cli-part-1-8712941279840156635.md~
2008/12/: porting-jit-to-cli-part-3-3519327524638923621.md~
2010/10/: phd-thesis-about-pypys-cli-jit-backend-969267841095296323.md~
2025/: 03-tales-claude-code-behave.md~  04-static-typing-in-spy.md.todo  04-static-typing-in-spy.md~  07-ep-talks.md~  above-the-clouds-computing.md~  lorem-ipsum.md~  metafunctions.md.txt  over-the-clouds.md~  test.md~  xxx.md~
about/: index.html
archive/1970/: index.html
blog/: CNAME  about.md  feed_rss_updated.xml
mkdocs_antocuni/: README.md  pyproject.toml
mkdocs_antocuni/mkdocs_antocuni/: __init__.py  plugin.py
search/: search_index.json
tags/: index.html
template/: index.md~
(+328 files in other folders)
