[project]
name = "antocuni.eu"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.3",
    "mkdocs-rss-plugin==1.17.1",
    "mkdocs-redirects==1.2.2",
    "mkdocs-glightbox",
    "mkdocs-antocuni",
]

[tool.uv.sources]
mkdocs-antocuni = { path = "mkdocs_antocuni", editable = true }
